--- a/bibliography.bib
+++ b/bibliography.bib
@@ -173,8 +173,8 @@
 @article{milioto2018bonnet,
   title={Bonnet: An Open-Source Training and Deployment Framework for Semantic Segmentation in Robotics using CNNs},
   author={Milioto, Andres and Stachniss, Cyrill},
-  journal={arXiv preprint arXiv:1802.08960},
-  year={2018}
+  journal={2019 IEEE International Conference on Robotics and Automation (ICRA)},
+  year={2019}
 }
 
 
@@ -235,14 +235,14 @@
 
 @InProceedings{lottes2017iros,
 title = {Semi-Supervised Online Visual Crop and Weed Classification in Precision Farming Exploiting Plant Arrangement},
-author = {P. Lottes and C. Stachniss},
+author = {Philipp Lottes and Cyrill Stachniss},
 booktitle = iros,
 year = {2017},
 url = {http://www.ipb.uni-bonn.de/wp-content/papercite-data/pdf/lottes17iros.pdf},
 }
 
 @Article{lottes2018ral,
-  author        = {P. Lottes and J. Behley and A. Milioto and C. Stachniss},
+  author        = {Philipp Lottes and Jens Behley and Andres Milioto and Cyrill Stachniss},
   title         = {Fully Convolutional Networks with Sequential Information for Robust Crop and Weed Detection in Precision Farming},
   journal       = ral,
   year          = 2018,
@@ -308,5 +308,74 @@ url = {http://www.ipb.uni-bonn.de/wp-content/papercite-data/pdf/lottes16jfr.pdf}
   organization={IEEE}
 }
 
+@Article{mccool2018ral,
+  author        = {McCool, Chris and Beattie, James and Firn, Jennifer and Lehnert, Chris and Kulk, Jason and Russell, Raymond and Perez, Tristan and Bawden, Owen},
+  title         = {Efficacy of Mechanical Weeding Tools: A Study into Alternative Weed Management Strategies Enabled by Robotics},
+  journal       = ral,
+  year          = 2018,
+  keywords      = {Agricultural Automation, Robotics in Agriculture and Forestry, Field Robots},
+  abstract      = {The rise of herbicide resistant weed species has re-invigorated research in non-chemical methods for weed management. Robots, such as AgBot II, which can detect and classify weeds as they traverse a field are a key enabling factor for individualised treatment of weed species. Integral to the invidualised treatment of weed species are the the non-herbicide methods through which the weeds are managed. This paper explores mechanical methods as an alternative to weed management. Three implements are considered: belowsurface tilling (arrow hoe), above-surface tilling (tines) and a cutting mechanism. These mechanisms were evaluated in a controlled field with varying rates of application to herbicide resistant weeds of interest for Queensland, Australia. Statistical analysis demonstrated the efficacy of these implements and highlighted the importance of early intervention. It was found that a tine, deployed automatically on AgBot II, was effective for all of the weeds considered in this study, leading to an overall survival probability of 0.28 0.15. Further analysis demonstrated the significance of treatment time with late intervention commencing at week 6 resulting in a survival probability of 0.54 0.08 vs 0.24 0.18 for earlier intervention at week 4.},
+}
+
+@article{ducket2018arxiv,
+  author    = {Duckett, Tom and
+               Pearson, Simon and
+               Blackmore, Simon and
+               Grieve, Bruce},
+  title     = {Agricultural Robotics: The Future of Robotic Agriculture},
+  journal   = {CoRR},
+  volume    = {abs/1806.06762},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1806.06762},
+  archivePrefix = {arXiv},
+  eprint    = {1806.06762},
+  timestamp = {Mon, 13 Aug 2018 16:46:25 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1806-06762},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@InProceedings{liebisch2016wslw,
+  author        = {Liebisch, Frank and Pfeifer Johannes and Khanna, Raghav and Lottes, Philipp and Stachniss, Cyrill and Falck, Tillmann and Sander, Slawomir and Siegwart, Roland and Walter, Achim and Galceran, Enric},
+  title         = {{Flourish -- A robotic approach for automation in crop management}},
+  booktitle     = {In Proc.~of the Workshop f\"ur Computer-Bildanalyse und unbemannte autonom fliegende Systeme in der Landwirtschaft},
+  year          = 2016,
+}
 
 
+@InProceedings{lottes2018iros,
+  author =   {Philipp Lottes and Jens Behley and Nived Chebrolu and Andres Milioto and Cyrill Stachniss},
+  title =    {{Joint Stem Detection and Crop-Weed Classification for Plant-specific Treatment in Precision Farming}},
+  booktitle = iros,
+  year =   2018,
+  abstract = {Applying agrochemicals is the default procedure for conventional weed control in crop production, but has negative impacts on the environment. Robots have the potential to treat every plant in the field individually and thus can reduce the required use of such chemicals. To achieve that, robots need the ability to identify crops and weeds in the field and must additionally select effective treatments. While certain types of weed can be treated mechanically, other types need to be treated by (selective) spraying. In this paper, we present an approach that provides the necessary information for effective plant-specific treatment. It outputs the stem location for weeds, which allows for mechanical treatments, and the covered area of the weed for selective spraying. Our approach uses an end-to- end trainable fully convolutional network that simultaneously estimates stem positions as well as the covered area of crops and weeds. It jointly learns the class-wise stem detection and the pixel-wise semantic segmentation. Experimental evaluations on different real-world datasets show that our approach is able to reliably solve this problem. Compared to state-of-the-art approaches, our approach not only substantially improves the stem detection accuracy, i.e., distinguishing crop and weed stems, but also provides an improvement in the semantic segmentation performance.}
+}
+
+@Article{mccool2017ral,
+  author        = {Chris McCool and Tristan Perez and Ben Upcroft},
+  title         = {{Mixtures of Lightweight Deep Convolutional Neural Networks: Applied to Agricultural Robotics}},
+  journal       = ral,
+  year          = 2017,
+  keywords      = {Computer Vision for Automation, Recognition, Agricultural Automation, CNN},
+  abstract      = {We propose a novel approach for training deep convolutional neural networks (DCNNs) that allows us to tradeoff complexity and accuracy to learn lightweight models suitable for robotic platforms such as AgBot II (which performs automated weed management). Our approach consists of three stages, the first is to adapt a pre-trained model to the task at hand. This provides state-of-the-art performance but at the cost of high computational complexity resulting in a low frame rate of just 0.12 frames per second (fps). Second, we use the adapted model and employ model compression techniques to learn a lightweight DCNN that is less accurate but has two orders of magnitude fewer parameters. Third, K lightweight models are combined as a mixture model to further enhance the performance of the lightweight models. Applied to the challenging task of weed segmentation, we improve accuracy from 85.9\%, using a traditional approach, to 93.9\% by adapting a complicated pre-trained DCNN with 25M parameters (Inception-v3). The downside to this adapted model, Adapted-IV3, is that it can only process 0.12fps. To make this approach fast while still retaining accuracy, we learn lightweight DCNNs which when combined can achieve accuracy greater than 90\% while using considerably fewer parameters capable of processing between 1.07 and 1.83 frames per second, up to an order of magnitude faster and up to an order of magnitude fewer parameters.},
+}
+
+@InProceedings{milioto2017uavg,
+Title = {Real-time Blob-wise Sugar Beets vs Weeds Classification for Monitoring Fields using Convolutional Neural Networks},
+Author = {Andres Milioto and Philipp Lottes and Cyrill Stachniss},
+Booktitle = uavg,
+Year = {2017},
+Abstract = {UAVs are becoming an important tool for field monitoring and precision farming. A prerequisite for observing and analyzing fields is the ability to identify crops and weeds from image data. In this paper, we address the problem of detecting the sugar beet plants and weeds in the field based solely on image data. We propose a system that combines vegetation detection and deep learning to obtain a high-quality classification of the vegetation in the field into value crops and weeds. We implemented and thoroughly evaluated our system on image data collected from different sugar beet fields and illustrate that our approach allows for accurately identifying the weeds on the field.},
+url = {http://www.ipb.uni-bonn.de/pdfs/milioto17uavg.pdf}
+}
+
+@article{sa2018rs,
+  author = {Inkyu Sa and Marija Popovic and Raghav Khanna and Zetao Chen and Philipp Lottes and Frank Liebisch and Juan Nieto and Cyrill Stachniss and Achim Walter and Roland Siegwart},
+  title = {{WeedMap: A Large-Scale Semantic Weed Mapping Framework Using Aerial Multispectral Imaging and Deep Neural Network for Precision Farming}},
+  journal = rs,
+  year = 2018,
+  volume =  10, 
+  issue = 9,
+  url = {http://www.mdpi.com/2072-4292/10/9/1423/pdf},
+  doi = {10.3390/rs10091423},
+  abstract =  {The ability to automatically monitor agricultural fields is an important capability in precision farming, enabling steps towards more sustainable agriculture. Precise, high-resolution monitoring is a key prerequisite for targeted intervention and the selective application of agro-chemicals. The main goal of this paper is developing a novel crop/weed segmentation and mapping framework that processes multispectral images obtained from an unmanned aerial vehicle (UAV) using a deep neural network (DNN).  Most studies on crop/weed semantic segmentation only consider single images for processing and classification. Images taken by UAVs often cover only a few hundred square meters with either color only or color and near-infrared (NIR) channels. Although a map can be generated by processing single segmented images incrementally, this requires additional complex information fusion techniques which struggle to handle high fidelity maps due to their computational costs and problems in ensuring global consistency. Moreover, computing a single large and accurate vegetation map (e.g., crop/weed) using a DNN is non-trivial due to difficulties arising from: (1) limited ground sample distances (GSDs) in high-altitude datasets, (2) sacrificed resolution resulting from downsampling high-fidelity images, and (3) multispectral image alignment. To address these issues, we adopt a stand sliding window approach that operates on only small portions of multispectral orthomosaic maps (tiles), which are channel-wise aligned and calibrated radiometrically across the entire map. We define the tile size to be the same as that of the DNN input to avoid resolution loss. Compared to our baseline model (i.e., SegNet with 3 channel RGB inputs) yielding an area under the curve (AUC) of [background=0.607, crop=0.681, weed=0.576], our proposed model with 9 input channels achieves [0.839, 0.863, 0.782]. Additionally, we provide an extensive analysis of 20 trained models, both qualitatively and quantitatively, in order to evaluate the effects of varying input channels and tunable network hyperparameters. Furthermore, we release a large sugar beet/weed aerial dataset with expertly guided annotations for further research in the fields of remote sensing, precision agriculture, and agricultural robotics.},
+}
