--- a/rasha19iros.tex
+++ b/rasha19iros.tex
@@ -194,7 +194,7 @@ Different to these works, we experiment with approaches that directly measure ho
 
 
     \begin{figure*}
-%	\vspace{1em} 
+	\vspace{1em} 
     \centering
     \includegraphics[scale=0.9]{pics/output_system_overview.pdf}
    		\caption{Overview figure of our system. We first perform unsupervised segmentation to obtain pseudo ground truth. Given the labels and different measures produced by the network, we rank the unlabeled samples and pick them accordingly for annotation. These are then used to refine the network.}
@@ -290,6 +290,7 @@ The datasets we used were acquired with a Bosch Deepfield Robotics BoniRob UGV i
 
 
     \begin{table}
+        \vspace{1em}
         \centering
         \caption{Datasets Statistics of Crop and Weed Plants}
         \begin{tabular}{@{}lccccc@{}} 
@@ -391,7 +392,7 @@ We follow the approach of \cite{milioto2018real} and split the new dataset into 
 
 
     \begin{figure}
-%	\vspace{1em} 
+	\vspace{1em} 
     \centering
     \includegraphics[width=\linewidth]{pics/pw_iou_stuttgart.pdf}
    		\caption{Pixel-wise mean IoU on the Stuttgart dataset.}
@@ -460,6 +461,7 @@ A more detailed breakdown of the methods performance is shown in tables \ref{tab
    
    
        \begin{table}
+       \vspace{1em}
         \centering
         \caption{Pixel-wise precision and recall on the Stuttgart dataset after selecting the first 10 samples}
         \begin{tabular}{@{}lcccc@{}} 
@@ -518,6 +520,7 @@ A more detailed breakdown of the methods performance is shown in tables \ref{tab
 
 
     \begin{table*}
+       \vspace{1em}
         \centering
         \caption{Object-wise Performance on the Stuttgart dataset. Each row shows the performance after selecting 10 samples with the different methods and refining the network.}
         \begin{tabular}{@{}cccccc@{}} 
