--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,7 +1,7 @@
-@STRING{aaai    = {Proc.\ of the Conference on Advancements of Artificial Intelligence (AAAI)} }
-@STRING{aaaiold = {Proc.\ of the National Conference on Artificial Intelligence (AAAI)} }
+@STRING{aaai    = {Proc.\ of the Conf.~on Advancements of Artificial Intelligence (AAAI)} }
+@STRING{aaaiold = {Proc.\ of the National onfon Artificial Intelligence (AAAI)} }
 @STRING{ac      = {IEEE Trans. on Automatic Control} }
-@STRING{acc     = {Proc.\ of the IEEE American Control Conference (ACC)} }
+@STRING{acc     = {Proc.\ of the IEEE American Control onf(ACC)} }
 @STRING{accv    = {Proc.\ of the Asian Conf.\ on Computer Vision (ACCV)} }
 @STRING{acra    = {Proc.\ of the Australasian Conf.\ on Robotics and Automation (ACRA)} }
 @STRING{acmgraphics = {ACM Transactions on Graphics} }
@@ -11,7 +11,7 @@
 @STRING{ams     = {Proc.\ of Autonome Mobile Systeme} }
 @STRING{ar      = {Autonomous Robots} }
 @STRING{arxiv   = {arXiv preprint} }
-@STRING{bmvc    = {Proc.\ of British Machine Vision Conference (BMVC)} }
+@STRING{bmvc    = {Proc.\ of British Machine Vision onf(BMVC)} }
 @STRING{cacm    = {Communications of the ACM} }
 @STRING{ccvw    = {Proc.\ of the Croation Computer Vision Workshop (CCVW)} }
 @STRING{cira    = {Proc.\ of the IEEE Intl.\ Symp. on Computer Intelligence in Robotics and Automation (CIRA)} }
@@ -44,7 +44,7 @@
 @STRING{ijgi    = {Intl.\ Journal of Geo-Information} }
 @STRING{ijhr    = {The Int. Journal of Humanoid Robotics (IJHR)} }
 @STRING{ijrr    = {Intl.\ Journal of Robotics Research (IJRR)} }
-@STRING{imvip   = {Proc.\ of the Irish Machine Vision and Image Processing Conference (IMVIP)} }
+@STRING{imvip   = {Proc.\ of the Irish Machine Vision and Image Processing onf(IMVIP)} }
 @STRING{iros    = {Proc.\ of the IEEE/RSJ Intl.\ Conf.\ on Intelligent Robots and Systems (IROS)} }
 @STRING{iser    = {Proc.\ of the Intl.\ Symp.\ on Experimental Robotics (ISER)} }
 @STRING{ismar   = {Proc.\ of the Intl.\ Symp.\ on Mixed and Augmented Reality (ISMAR)} }
@@ -71,13 +71,13 @@
 @STRING{mva     = {Proc.\ of the IAPR Conf.\ on Machine Vision Applications (MVA)} }
 @STRING{nips    = {Proc.\ of the Conf.\ on Neural Information Processing Systems (NIPS)} }
 @STRING{nipsjournal={Advances in Neural Information Processing Systems} }
-@STRING{oceans  = {Proc.\ of OCEANS MTS/IEEE Conference and Exhibition} }
+@STRING{oceans  = {Proc.\ of OCEANS MTS/IEEE onfand Exhibition} }
 @STRING{pami    = {IEEE Trans.\ on Pattern Analalysis and Machine Intelligence (TPAMI)} }
-@STRING{pcv     = {Proc.\ of the ISPRS Conference on Photogrammeric Computer Vision (PCV)} }
+@STRING{pcv     = {Proc.\ of the ISPRS onfon Photogrammeric Computer Vision (PCV)} }
 @STRING{pers    = {Photogrammetric Engineering and Remote Sensing (PE\&RS)} }
 @STRING{pfg     = {Photogrammetrie -- Fernerkundung -- Geoinformation (PFG)} }
 @STRING{phowo   = {Proc.\ of the Photogrammetric Week (PhoWo)} }
-@STRING{pia     = {Proc.\ of the ISPRS Conference on Photogrammeric Image Analysis (PIA)} }
+@STRING{pia     = {Proc.\ of the ISPRS onfon Photogrammeric Image Analysis (PIA)} }
 @STRING{pr      = {Pattern Recognition} }
 @STRING{prl     = {Pattern Recognition Letters} }
 @STRING{ral     = {IEEE Robotics and Automation Letters (RA-L)} }
@@ -88,7 +88,7 @@
 @STRING{rss     = {Proc.\ of Robotics: Science and Systems (RSS)} }
 @STRING{rssbook = {Robotics: Science and Systems} }
 @STRING{sensors = {IEEE Sensors Journal} }
-@STRING{sice    = {Proc.\ of the Annual Conference of the Society of Instrument and Control Engineers (SICE)} }
+@STRING{sice    = {Proc.\ of the Annual onfof the Society of Instrument and Control Engineers (SICE)} }
 @STRING{smc     = {Proc.\ of the IEEE Intl.\ Conf.\ on Systems, Man, and Cybernetics (SMC)} }
 @STRING{snowbird= {Proc.\ of the Learning Workshop (Snowbird)} }
 @STRING{soave   = {Proc.\ of the Workshop on Self-Organization of AdaptiVE behavior (SOAVE)} }
@@ -128,16 +128,15 @@
 @inproceedings{holub2008entropy,
   title={Entropy-based active learning for object recognition},
   author={Holub, Alex and Perona, Pietro and Burl, Michael C},
-  booktitle={2008 IEEE Computer Society Conference on Computer Vision and Pattern Recognition Workshops},
+  booktitle={2008 IEEE Computer Society onfon Computer Vision and Pattern Recognition Workshops},
   pages={1--8},
   year={2008},
-  organization={IEEE}
 }
 
 @inproceedings{zhou2017fine,
   title={Fine-tuning convolutional neural networks for biomedical image analysis: actively and incrementally},
   author={Zhou, Zongwei and Shin, Jae and Zhang, Lei and Gurudu, Suryakanth and Gotway, Michael and Liang, Jianming},
-  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  booktitle={Proceedings of the IEEE onfon computer vision and pattern recognition},
   pages={7340--7351},
   year={2017}
 }
@@ -145,16 +144,15 @@
 @inproceedings{yang2017suggestive,
   title={Suggestive annotation: A deep active learning framework for biomedical image segmentation},
   author={Yang, Lin and Zhang, Yizhe and Chen, Jianxu and Zhang, Siyuan and Chen, Danny Z},
-  booktitle={International conference on medical image computing and computer-assisted intervention},
+  booktitle={Intl.~onfon medical image computing and computer-assisted intervention},
   pages={399--407},
   year={2017},
-  organization={Springer}
 }
 
 @inproceedings{dutt2016active,
   title={Active image segmentation propagation},
   author={Dutt Jain, Suyog and Grauman, Kristen},
-  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  booktitle={Proceedings of the IEEE onfon Computer Vision and Pattern Recognition},
   pages={2864--2873},
   year={2016}
 }
@@ -163,7 +161,7 @@
 @inproceedings{gal2017deep,
   title={Deep bayesian active learning with image data},
   author={Gal, Yarin and Islam, Riashat and Ghahramani, Zoubin},
-  booktitle={Proceedings of the 34th International Conference on Machine Learning-Volume 70},
+  booktitle={Proceedings of the 34th Intl.~onfon Machine Learning-Volume 70},
   pages={1183--1192},
   year={2017},
   organization={JMLR. org}
@@ -173,7 +171,7 @@
 @article{milioto2018bonnet,
   title={Bonnet: An Open-Source Training and Deployment Framework for Semantic Segmentation in Robotics using CNNs},
   author={Milioto, Andres and Stachniss, Cyrill},
-  journal={2019 IEEE International Conference on Robotics and Automation (ICRA)},
+  journal={2019 IEEE Intl.~onfon Robotics and Automation (ICRA)},
   year={2019}
 }
 
@@ -181,16 +179,15 @@
 @inproceedings{milioto2018real,
   title={Real-time semantic segmentation of crop and weed for precision agriculture robots leveraging background knowledge in cnns},
   author={Milioto, Andres and Lottes, Philipp and Stachniss, Cyrill},
-  booktitle={2018 IEEE International Conference on Robotics and Automation (ICRA)},
+  booktitle={2018 IEEE Intl.~onfon Robotics and Automation (ICRA)},
   pages={2229--2235},
   year={2018},
-  organization={IEEE}
 }
 
 @inproceedings{beluch2018power,
   title={The power of ensembles for active learning in image classification},
   author={Beluch, William H and Genewein, Tim and N{\"u}rnberger, Andreas and K{\"o}hler, Jan M},
-  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  booktitle={Proceedings of the IEEE onfon Computer Vision and Pattern Recognition},
   pages={9368--9377},
   year={2018}
 }
@@ -212,7 +209,6 @@
   number={12},
   pages={2591--2600},
   year={2017},
-  publisher={IEEE}
 }
 
 
@@ -227,10 +223,9 @@
 @inproceedings{freytag2014selecting,
   title={Selecting influential examples: Active learning with expected model output changes},
   author={Freytag, Alexander and Rodner, Erik and Denzler, Joachim},
-  booktitle={European Conference on Computer Vision},
+  booktitle={European onfon Computer Vision},
   pages={562--577},
   year={2014},
-  organization={Springer}
 }
 
 @InProceedings{lottes2017iros,
@@ -272,12 +267,11 @@ url = {http://www.ipb.uni-bonn.de/wp-content/papercite-data/pdf/lottes16jfr.pdf}
 @article{chebrolu2017agricultural,
   title={Agricultural robot dataset for plant classification, localization and mapping on sugar beet fields},
   author={Chebrolu, Nived and Lottes, Philipp and Schaefer, Alexander and Winterhalter, Wera and Burgard, Wolfram and Stachniss, Cyrill},
-  journal={The International Journal of Robotics Research},
+  journal={The Intl.~Journal of Robotics Research},
   volume={36},
   number={10},
   pages={1045--1052},
   year={2017},
-  publisher={SAGE Publications Sage UK: London, England}
 }
 
 
@@ -289,7 +283,6 @@ url = {http://www.ipb.uni-bonn.de/wp-content/papercite-data/pdf/lottes16jfr.pdf}
   number={12},
   pages={2481--2495},
   year={2017},
-  publisher={IEEE}
 }
 
 @article{paszke2016enet,
@@ -302,10 +295,9 @@ url = {http://www.ipb.uni-bonn.de/wp-content/papercite-data/pdf/lottes16jfr.pdf}
 @inproceedings{zhang2018self,
   title={Self-learning to detect and segment cysts in lung CT images without manual annotation},
   author={Zhang, Ling and Gopalakrishnan, Vissagan and Lu, Le and Summers, Ronald M and Moss, Joel and Yao, Jianhua},
-  booktitle={2018 IEEE 15th International Symposium on Biomedical Imaging (ISBI 2018)},
+  booktitle={2018 IEEE 15th Intl.~Symposium on Biomedical Imaging (ISBI 2018)},
   pages={1100--1103},
   year={2018},
-  organization={IEEE}
 }
 
 @Article{mccool2018ral,
