Conclusion Bib andex fixes

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,5 +1,5 @@
 @STRING{aaai    = {Proc.\ of the Conf.~on Advancements of Artificial Intelligence (AAAI)} }
-@STRING{aaaiold = {Proc.\ of the National onfon Artificial Intelligence (AAAI)} }
+@STRING{aaaiold = {Proc.\ of the National Conf.~on Artificial Intelligence (AAAI)} }
 @STRING{ac      = {IEEE Trans. on Automatic Control} }
 @STRING{acc     = {Proc.\ of the IEEE American Control onf(ACC)} }
 @STRING{accv    = {Proc.\ of the Asian Conf.\ on Computer Vision (ACCV)} }
@@ -73,11 +73,11 @@
 @STRING{nipsjournal={Advances in Neural Information Processing Systems} }
 @STRING{oceans  = {Proc.\ of OCEANS MTS/IEEE onfand Exhibition} }
 @STRING{pami    = {IEEE Trans.\ on Pattern Analalysis and Machine Intelligence (TPAMI)} }
-@STRING{pcv     = {Proc.\ of the ISPRS onfon Photogrammeric Computer Vision (PCV)} }
+@STRING{pcv     = {Proc.\ of the ISPRS Conf.~on Photogrammeric Computer Vision (PCV)} }
 @STRING{pers    = {Photogrammetric Engineering and Remote Sensing (PE\&RS)} }
 @STRING{pfg     = {Photogrammetrie -- Fernerkundung -- Geoinformation (PFG)} }
 @STRING{phowo   = {Proc.\ of the Photogrammetric Week (PhoWo)} }
-@STRING{pia     = {Proc.\ of the ISPRS onfon Photogrammeric Image Analysis (PIA)} }
+@STRING{pia     = {Proc.\ of the ISPRS Conf.~on Photogrammeric Image Analysis (PIA)} }
 @STRING{pr      = {Pattern Recognition} }
 @STRING{prl     = {Pattern Recognition Letters} }
 @STRING{ral     = {IEEE Robotics and Automation Letters (RA-L)} }
@@ -128,7 +128,7 @@
 @inproceedings{holub2008entropy,
   title={Entropy-based active learning for object recognition},
   author={Holub, Alex and Perona, Pietro and Burl, Michael C},
-  booktitle={2008 IEEE Computer Society onfon Computer Vision and Pattern Recognition Workshops},
+  booktitle={2008 IEEE Computer Society Conf.~on Computer Vision and Pattern Recognition Workshops},
   pages={1--8},
   year={2008},
 }
@@ -136,7 +136,7 @@
 @inproceedings{zhou2017fine,
   title={Fine-tuning convolutional neural networks for biomedical image analysis: actively and incrementally},
   author={Zhou, Zongwei and Shin, Jae and Zhang, Lei and Gurudu, Suryakanth and Gotway, Michael and Liang, Jianming},
-  booktitle={Proceedings of the IEEE onfon computer vision and pattern recognition},
+  booktitle={Proceedings of the IEEE Conf.~on computer vision and pattern recognition},
   pages={7340--7351},
   year={2017}
 }
@@ -144,7 +144,7 @@
 @inproceedings{yang2017suggestive,
   title={Suggestive annotation: A deep active learning framework for biomedical image segmentation},
   author={Yang, Lin and Zhang, Yizhe and Chen, Jianxu and Zhang, Siyuan and Chen, Danny Z},
-  booktitle={Intl.~onfon medical image computing and computer-assisted intervention},
+  booktitle={Intl.~Conf.~on medical image computing and computer-assisted intervention},
   pages={399--407},
   year={2017},
 }
@@ -152,7 +152,7 @@
 @inproceedings{dutt2016active,
   title={Active image segmentation propagation},
   author={Dutt Jain, Suyog and Grauman, Kristen},
-  booktitle={Proceedings of the IEEE onfon Computer Vision and Pattern Recognition},
+  booktitle={Proceedings of the IEEE Conf.~on Computer Vision and Pattern Recognition},
   pages={2864--2873},
   year={2016}
 }
@@ -161,7 +161,7 @@
 @inproceedings{gal2017deep,
   title={Deep bayesian active learning with image data},
   author={Gal, Yarin and Islam, Riashat and Ghahramani, Zoubin},
-  booktitle={Proceedings of the 34th Intl.~onfon Machine Learning-Volume 70},
+  booktitle={Proceedings of the 34th Intl.~Conf.~on Machine Learning-Volume 70},
   pages={1183--1192},
   year={2017},
   organization={JMLR. org}
@@ -171,7 +171,7 @@
 @article{milioto2018bonnet,
   title={Bonnet: An Open-Source Training and Deployment Framework for Semantic Segmentation in Robotics using CNNs},
   author={Milioto, Andres and Stachniss, Cyrill},
-  journal={2019 IEEE Intl.~onfon Robotics and Automation (ICRA)},
+  journal={2019 IEEE Intl.~Conf.~on Robotics and Automation (ICRA)},
   year={2019}
 }
 
@@ -179,7 +179,7 @@
 @inproceedings{milioto2018real,
   title={Real-time semantic segmentation of crop and weed for precision agriculture robots leveraging background knowledge in cnns},
   author={Milioto, Andres and Lottes, Philipp and Stachniss, Cyrill},
-  booktitle={2018 IEEE Intl.~onfon Robotics and Automation (ICRA)},
+  booktitle={2018 IEEE Intl.~Conf.~on Robotics and Automation (ICRA)},
   pages={2229--2235},
   year={2018},
 }
@@ -187,7 +187,7 @@
 @inproceedings{beluch2018power,
   title={The power of ensembles for active learning in image classification},
   author={Beluch, William H and Genewein, Tim and N{\"u}rnberger, Andreas and K{\"o}hler, Jan M},
-  booktitle={Proceedings of the IEEE onfon Computer Vision and Pattern Recognition},
+  booktitle={Proceedings of the IEEE Conf.~on Computer Vision and Pattern Recognition},
   pages={9368--9377},
   year={2018}
 }
@@ -223,7 +223,7 @@
 @inproceedings{freytag2014selecting,
   title={Selecting influential examples: Active learning with expected model output changes},
   author={Freytag, Alexander and Rodner, Erik and Denzler, Joachim},
-  booktitle={European onfon Computer Vision},
+  booktitle={European Conf.~on Computer Vision},
   pages={562--577},
   year={2014},
 }
