--- a/rasha19iros.tex
+++ b/rasha19iros.tex
@@ -85,11 +85,11 @@ application is the  transfer of an existing semantic segmentation CNN to a new
 field. We propose a novel a approach that, given a trained model on one field,
 refines the network on a substantially different field  providing an effective
 method of selecting samples to annotate for supporting the transfer. Our
-method takes into account the influence of the unlabeled samples on the
+method takes into account the influence of the so far unlabeled samples on the
 weights of the network and  ranks and selects them accordingly for annotation.
 We evaluated our approach on two challenging  datasets from the agricultural
 robotics domain and show that we achieve a higher accuracy with a  smaller
-number of samples compared to random sampling for annotation as well as
+number of samples compared to randomly selecting samples for annotation as well as
 uncertainty-based  approaches to select examples for annotation. Thus, our
 approach reduces the required human labeling  effort.
 
